--- a/paginas/style3.css
+++ b/paginas/style3.css
@@ -12,6 +12,7 @@ header{
   text-align: center;
   padding: 1.5%;
   background-color: #737373;
+  margin-bottom: 2%;
 }
 
 h1{
@@ -25,20 +26,22 @@ form{
   text-align: center;
   margin: auto;
   margin-top: 3%;
+  margin-bottom: 3%;
   padding: 1.5%;
   border: 2px solid rgba(0, 0, 0, 0.39);
   border-radius: 10px;
 }
 
 label{
-  font-size: 18px;
+  font-size: 19px;
   font-weight: bold;
 }
 
 input{
   border-radius: 5px;
   padding: 0.8%;
-  margin-bottom: 3%;
+  margin-bottom: 5%;
+  margin-top: 5%;
 }
 
 button{
@@ -53,44 +56,57 @@ button{
   padding-right: 20%;
 }
 
-p{
-  color: rgb(214, 66, 66);
-  font-weight: bold;
-  font-size: 18px;
-  margin-bottom: 3%;
+div{
+  background-color: #A6A6A6;
+  margin: auto;
+  width: 1100px;
+  max-height: 500px;
+  min-height: 300px;
+  overflow-y: auto;
+  border: 3px solid rgba(0, 0, 0, 0.185);
+  border-radius: 15px;
 }
 
-table, th, td {
-border: 1px solid black;
+p{
+  font-size: 18px;
+  background-color: #F2F2F2;
+  border: 2px solid black;
+  border-radius: 8px;
+  display: inline-block;
+  padding-right: 4%;
+  padding-left: 1%;
+  padding-top: 0.6%;
+  padding-bottom: 0.6%;
+  margin-left: 2%;
+  margin-top: 0.3%;
+  margin-bottom: 1%;
+  margin-right: 2%;
 }
-  
-table {
-  border-collapse: collapse;
-  margin: auto;
-  margin-top: 3%;
+
+h2{
+  font-size: 20px;
+  text-align: left;
+  color: #383636;
+  margin-bottom: 5%;
 }
-  
-th, td{
-  padding: 10px;
+
+select{
+  border-radius: 8px;
+}
+
+option{
+  font-size: 16px;
   text-align: center;
-  width: 120px;
 }
-  
-th{
-  font-weight: bold;
+
+h3{
+  padding: 0.8%;
+  font-size: 22px;
 }
-    
-tr:nth-child(even) {
-  background-color: #DCEBE6;
-}
-  
-tr:hover:nth-child(1n + 1) {
-  background-color: #085F63;
-  color: #fff;
-}  
 
 a{
   margin-top: 3%;
+  margin-bottom: 3%;
   margin-left: 40%;
   margin-right: 40%;
   padding: 1%;
